# cpp-project-template

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  README  README.md  configure
docs/: index.html
src/: CMakeLists.txt  appinfo.h.in.cmake  main.cc
test/: CMakeLists.txt  main.cc  sanity_check.cc  test.h
